# server.js
@@ -2,10 +2,20 @@ const express = require('express');
 const bodyParser = require('body-parser')
 const mongodb = require('./data/database');
 const app = express();
-
+const passport = require('passport');
+const session = require('express-session');
+const GitHubStrategy = require('passport-github2').Strategy;
+const cors = require('cors');
 const port = process.env.PORT || 3000;
 
 app.use(bodyParser.json());
+app.use(session({
+  secret: "secret",
+  resave: false,
+  saveUninitialized: true
+}));
+app.use(passport.initialize());
+app.use(passport.session());
 
 app.use((req, res, next) => {
   res.setHeader('Access-Control-Allow-Origin', '*');
@@ -14,7 +24,34 @@ app.use((req, res, next) => {
   next();
 });
 
+app.use(cors({ methods: ['GET', 'POST', 'DELETE', 'UPDATE', 'PUT', 'PATCH']}));
+app.use(cors({ origin: '*'}));
 app.use('/', require('./routes'));
+
+passport.use(new GitHubStrategy({
+  clientID: process.env.GITHUB_CLIENT_ID,
+  clientSecret: process.env.GITHUB_CLIENT_SECRET,
+  callbackURL: process.env.CALLBACK_URL
+},
+function(accessToken, refreshToken, profile, done) {
+  return done(null, profile);
+}));
+
+passport.serializeUser((user, done) => {
+  done(null, user);
+});
+passport.deserializeUser((user, done) => {
+  done(null, user);
+});
+
+app.get('/', (req, res) => { res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.displayName}` : "Logged Out")});
+app.get('/github/callback', passport.authenticate('github', {
+  failureRedirect: '/api-docs',
+  session: false
+}), (req, res) => {
+  req.session.user = req.user;
+  res.redirect('/');
+});
 
 mongodb.initDb((err) => {
   if(err) {
