# swagger.json
@@ -11,12 +11,42 @@
     "https"
   ],
   "paths": {
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api-docs": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/cars/": {
       "get": {
         "tags": [
           "Cars"
         ],
-        "description": "Get all cars",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -30,7 +60,7 @@
         "tags": [
           "Cars"
         ],
-        "description": "Add new car",
+        "description": "",
         "parameters": [
           {
             "name": "body",
@@ -67,6 +97,12 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -78,7 +114,7 @@
         "tags": [
           "Cars"
         ],
-        "description": "Get a car by id",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -93,6 +129,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           }
         }
       },
@@ -100,7 +139,7 @@
         "tags": [
           "Cars"
         ],
-        "description": "Update a car information",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -143,6 +182,12 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
@@ -152,7 +197,7 @@
         "tags": [
           "Cars"
         ],
-        "description": "Delete a car",
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -164,6 +209,12 @@
         "responses": {
           "204": {
             "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
